sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: value &&! is not a member of Boolean
    while(j>0&&!plusPetitQue(j-1,v)){
             ^